--- a/arctos_hardware_interface/package.xml
+++ b/arctos_hardware_interface/package.xml
@@ -3,26 +3,47 @@
 <package format="3">
   <name>arctos_hardware_interface</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="coen@todo.todo">coen</maintainer>
-  <license>TODO: License declaration</license>
+  <description>Demo for 6 DOF robot.</description>
+
+  <maintainer email="denis.stogl@stoglrobotics.de">Dr.-Ing. Denis Štogl</maintainer>
+  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
+  <maintainer email="christoph.froehlich@ait.ac.at">Christoph Froehlich</maintainer>
+
+  <author email="paul.gesel@picknik.ai">Paul Gesel</author>
+
+  <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-  <depend>rclcpp</depend>
 
-  <!-- Message types -->
-  <depend>can_msgs</depend>
-  <depend>sensor_msgs</depend>
+  <depend>backward_ros</depend>
+  <depend>control_msgs</depend>
+  <depend>controller_interface</depend>
   <depend>hardware_interface</depend>
+  <depend>kdl_parser</depend>
   <depend>pluginlib</depend>
   <depend>rclcpp_lifecycle</depend>
-  <depend>realtime_tools</depend>
+  <depend>rclcpp</depend>
   <depend>rcpputils</depend>
-  <!-- CAN interaction -->
-  <depend>ros2_socketcan</depend>
+  <depend>realtime_tools</depend>
+  <depend>trajectory_msgs</depend>
 
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
+  <exec_depend>controller_manager</exec_depend>
+  <exec_depend>joint_state_broadcaster</exec_depend>
+  <exec_depend>joint_state_publisher_gui</exec_depend>
+  <exec_depend>launch_ros</exec_depend>
+  <exec_depend>launch</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>ros2_control_demo_description</exec_depend>
+  <exec_depend>ros2controlcli</exec_depend>
+  <exec_depend>ros2launch</exec_depend>
+  <exec_depend>rviz2</exec_depend>
+  <exec_depend>urdf</exec_depend>
+  <exec_depend>xacro</exec_depend>
+  <exec_depend>arctos_description</exec_depend>
+  <test_depend>ament_cmake_pytest</test_depend>
+  <test_depend>launch_testing_ros</test_depend>
+  <test_depend>liburdfdom-tools</test_depend>
+  <test_depend>xacro</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
