--- a/arctos_motor_driver/CMakeLists.txt
+++ b/arctos_motor_driver/CMakeLists.txt
@@ -1,26 +1,51 @@
-cmake_minimum_required(VERSION 3.8)
+cmake_minimum_required(VERSION 3.5)
 project(arctos_motor_driver)
 
+# Set compiler options (optional)
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-# find dependencies
+# Find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(can_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
+# Create a library for the motor driver
+add_executable(arctos_motor_driver
+  src/motor_driver.cpp
+)
 
-if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # comment the line when a copyright and license is added to all source files
-  set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # comment the line when this package is in a git repo and when
-  # a copyright and license is added to all source files
-  set(ament_cmake_cpplint_FOUND TRUE)
-  ament_lint_auto_find_test_dependencies()
-endif()
+# Specify include directories
+target_include_directories(arctos_motor_driver
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+)
 
+# Specify dependencies
+ament_target_dependencies(arctos_motor_driver
+  rclcpp
+  can_msgs
+  sensor_msgs
+)
+install(TARGETS
+  arctos_motor_driver
+  DESTINATION lib/${PROJECT_NAME})
+
+# Install header files
+install(DIRECTORY include/
+  DESTINATION include
+)
+
+# Install config directory
+install(DIRECTORY config/
+  DESTINATION share/${PROJECT_NAME}/
+)
+
+ament_export_include_directories(include)
+#ament_export_targets(export_arctos_motor_driver HAS_LIBRARY_TARGET)
+ament_export_dependencies(rclcpp can_msgs sensor_msgs)
+
+# Export package information
 ament_package()
