--- a/arctos_motor_driver/package.xml
+++ b/arctos_motor_driver/package.xml
@@ -2,18 +2,18 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>arctos_motor_driver</name>
-  <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="coen@todo.todo">coen</maintainer>
-  <license>TODO: License declaration</license>
+  <version>0.0.1</version>
+  <description>Motor driver for makerbase servo42D/57D</description>
+  <maintainer email="coenheerink@outlook.com">coen</maintainer>
+  <license>MIT License</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
-  <exec_depend>ros2_socketcan</exec_depend>
   <exec_depend>can_msgs</exec_depend> 
-
+  <exec_depend>rclcpp</exec_depend>
+  
   <export>
     <build_type>ament_cmake</build_type>
   </export>
