--- a/arctos_moveit_config/config/ros2_controllers.yaml
+++ b/arctos_moveit_config/config/ros2_controllers.yaml
@@ -3,38 +3,27 @@ controller_manager:
   ros__parameters:
     update_rate: 100  # Hz
 
-    arm_controller:
-      type: joint_trajectory_controller/JointTrajectoryController
-
-
-    gripper_controller:
+    arctos_controller:
       type: joint_trajectory_controller/JointTrajectoryController
 
 
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
-arm_controller:
+arctos_controller:
   ros__parameters:
     joints:
-      - joint1
-      - joint2
-      - joint3
-      - joint4
-      - joint5
-      - joint6
+      - joint_1
+      - joint_2
+      - joint_3
+      - joint_4
+      - joint_5
+      - joint_6
+      - jaw2
+      - jaw1
     command_interfaces:
-      - position
-    state_interfaces:
       - position
       - velocity
-gripper_controller:
-  ros__parameters:
-    joints:
-      - jaw1
-      - jaw2
-    command_interfaces:
-      - position
     state_interfaces:
       - position
       - velocity
