--- a/arctos_moveit_config/package.xml
+++ b/arctos_moveit_config/package.xml
@@ -4,17 +4,14 @@
   <name>arctos_moveit_config</name>
   <version>0.3.0</version>
   <description>
-     An automatically generated package with all the configuration and launch files for using the arctos_urdf with the MoveIt Motion Planning Framework
+     An automatically generated package with all the configuration and launch files for using the arctos with the MoveIt Motion Planning Framework
   </description>
-  <maintainer email="coenheerink@outlookc.om">Coen Heerink</maintainer>
+  <maintainer email="coenheerink@outlook.com">Coen Heerink</maintainer>
 
   <license>BSD</license>
 
-  <url type="website">http://moveit.ros.org/</url>
-  <url type="bugtracker">https://github.com/ros-planning/moveit2/issues</url>
-  <url type="repository">https://github.com/ros-planning/moveit2</url>
 
-  <author email="coenheerink@outlookc.om">Coen Heerink</author>
+  <author email="coenheerink@outlook.com">Coen Heerink</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
