--- a/arctos_description/CMakeLists.txt
+++ b/arctos_description/CMakeLists.txt
@@ -8,6 +8,8 @@ install(DIRECTORY meshes DESTINATION share/${PROJECT_NAME})
 install(DIRECTORY config DESTINATION share/${PROJECT_NAME})
 install(DIRECTORY srdf DESTINATION share/${PROJECT_NAME})
 install(DIRECTORY launch DESTINATION share/${PROJECT_NAME})
+install(DIRECTORY rviz DESTINATION share/${PROJECT_NAME})
+
 ament_package()
 
 
