--- a/arctos_hardware_interface/package.xml
+++ b/arctos_hardware_interface/package.xml
@@ -26,7 +26,7 @@
   <depend>rcpputils</depend>
   <depend>realtime_tools</depend>
   <depend>trajectory_msgs</depend>
-
+  <depend>arctos_motor_driver</depend>
   <exec_depend>controller_manager</exec_depend>
   <exec_depend>joint_state_broadcaster</exec_depend>
   <exec_depend>joint_state_publisher_gui</exec_depend>
